devops-engineer/problems/problem-2/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-app
  labels:
    app.kubernetes.io/name: devops-demo-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: devops-demo-app

---
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-app-headless
  labels:
    app.kubernetes.io/name: devops-demo-app
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: devops-demo-app
